# string-lib

./: .clang-format  .gitignore  CMakeLists.txt
include/: strlib.h
src/: strlib.c
test/: main.c
